@@ -7,6 +7,11 @@
   * This is typically due to customisation of the firmware as on Late Intel Macs such as the MacMini8,1
   * This affected running the DEBUG build on such units
   * RefindPlus now accommodates this situation.
+- Fixes Driver Loading from User Defined Folders
+  * Drivers in folders defined by the 'scan_driver_dirs' configuration token were not loaded in some instances
+  * This was because the routine expected the defined paths to not include the installation folder path
+  * This expectation was not specified however, meaning some users included the path in 'scan_driver_dirs'
+  * This expectation has now been removed and the installation folder path may or may not be included
 - Fixes Switching External Screens to Text Mode
   * External screens switched to text mode were functional but elements, such as the header, were missing
   * This has now been fixed along with properly disabling the cursor
